--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "dependencies": {
     "3d-react-carousal": "^4.0.2",
     "@material-ui/core": "^4.12.3",
-    "bootstrap": "^5.1.1",
+    "@react-hook/window-size": "^3.0.7",
+    "bootstrap": "^5.1.3",
     "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.0",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "reactstrap": "^8.10.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
