--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "3d-react-carousal": "^4.0.2",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.0.6",
     "@react-hook/window-size": "^3.0.7",
     "bootstrap": "^5.1.3",
     "infinite-react-carousel": "^1.2.11",
